--- a/4/task1.html
+++ b/4/task1.html
@@ -8,7 +8,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="menu">
+	<nav class="menu">
 			<span class="list">HOME</span>
 			<span class="list">NEWS</span>
 			<span class="list">ECONOMICS</span>
@@ -16,6 +16,6 @@
 			<span class="list">SPORT</span>
 			<span class="list">CULTURE</span>
 			<span class="list">TRAVELS</span>
-	</div>
+	</nav>
 </body>
 </html>
