--- a/4/task3.html
+++ b/4/task3.html
@@ -23,6 +23,7 @@
         <li class="nomber">7</li>
         <li class="nomber">8</li>
         <li class="nomber">9</li>
+        <li class="nomber">10</li>
         <li class="next">NEXT»</li>
         <li class="last">LAST»</li>
     </ul>
