--- a/5/task1.html
+++ b/5/task1.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style1.css">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='http://fonts.googleapis.com/css?family=Economica:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<title>Document</title>
 </head>
 <body>
-    hello
+    <div class="navbar">
+        <span>
+        <div class="list">
+            <div class="menu">HOME
+            </div>
+            <div class="list-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+          </div>
+          <div class="list">
+            <div class="menu">NEWS
+            </div>
+            <div class="list-content">
+              <a href="#">Link 4</a>
+              <a href="#">Link 5</a>
+              <a href="#">Link 6</a>
+            </div>
+          </div>
+        <div class="list">
+          <div class="menu">SEARCH
+          </div>
+          <div class="list-content">
+            <a href="#">Link 7</a>
+            <a href="#">Link 8</a>
+            <a href="#">Link 9</a>
+          </div>
+        </div> 
+        <div class="list">
+            <div class="menu">LAMBADA
+            </div>
+            <div class="list-content">
+              <a href="#">Link 10</a>
+              <a href="#">Link 11</a>
+              <a href="#">Link 12</a>
+            </div>
+          </div>
+          <div class="list">
+            <div class="menu">ANSWER
+            </div>
+            <div class="list-content">
+              <a href="#">Link 13</a>
+              <a href="#">Link 14</a>
+              <a href="#">Link 15</a>
+            </div>
+          </div>
+          <div class="list">
+            <div class="menu">LOGIK
+            </div>
+            <div class="list-content">
+              <a href="#">Link 16</a>
+              <a href="#">Link 17</a>
+              <a href="#">Link 18</a>
+            </div>
+          </div>
+          <div class="list">
+            <div class="menu">SPORT
+            </div>
+            <div class="list-content">
+              <a href="#">Link 19</a>
+              <a href="#">Link 20</a>
+              <a href="#">Link 21</a>
+            </div>
+          </div>
+      </div>
+    </span>
 </body>
 </html>
