--- a/6/task1.html
+++ b/6/task1.html
@@ -40,7 +40,7 @@
                 <div class="first"><img src="img/1.png" alt="img/1.png"><span class="table-text">Stating or Production</span></div>
                 <div class="first1"><img src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
             </div>
-            <button class="button-enrol2">ENROL TODAY</button>
+            <button class="button-enrol button-enrol2">ENROL TODAY</button>
         </div>
     </div>
     <div class="tree-tile">
