--- a/6/task2.html
+++ b/6/task2.html
@@ -17,7 +17,20 @@
             <div class="all-foto-coment">
             <img class="girl-foto" src="img/girl.jpg" alt="User_foto">
                 <div class="white-triangle"><img src="img/whtite.png" alt="triangle">
-                    <div class="coment-box"></div>
+                </div>
+                <div class="coment-box">
+                    <div class="coment-text">- Staciya Trollio</div>
+                    <div class="coment-customers">Customers</div>
+                    <div class="coment-dot">.............................................................................................</div>
+                    <div class="coment-coment">Lorem ipsum dolor sit fvdfv fvfv amet consec tetur sdcsdcdscsd dfbdf dgerg. </div>
+                </div>
+                <img class="men-foto" src="img/men.jpg" alt="User_foto">
+                <div class="white-triangle2"><img src="img/whtite.png" alt="triangle"></div>
+                <div class="coment-box">
+                    <div class="coment-text">- Tolik Dodik</div>
+                    <div class="coment-customers">Customers</div>
+                    <div class="coment-dot">.............................................................................................</div>
+                    <div class="coment-coment">Lorem ipsum dolor sit amet consec tetur sdcsdcdscsd dfbdf dgerg. </div>
                 </div>
             </div>
         </div>
