--- a/7/task1.html
+++ b/7/task1.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div class="table">
-        <p class="line1">Ш Б</p>
-        <p class="line2">М Н К</p>
-        <p class="line3">Д Ь Б Ш</p>
-        <p class="line4">Б Д Н К М</p>
-        <p class="line5">И Н Ш М К</p>
-        <p class="line6">Н Ш И Н К Б</p>
-        <p class="line7">Ш И Н Б К И</p>
-        <p class="line8">К Н Ш М Щ Б И</p>
-        <p class="line9">Б К Ш М И Щ Н</p>
+        <p class="line01">Ш Б</p>
+        <p class="line02">М Н К</p>
+        <p class="line03">Д Ь Б Ш</p>
+        <p class="line04">Б Д Н К М</p>
+        <p class="line05">И Н Ш М К</p>
+        <p class="line06">Н Ш И Н К Б</p>
+        <p class="line07">Ш И Н Б К И</p>
+        <p class="line08">К Н Ш М Щ Б И</p>
+        <p class="line09">Б К Ш М И Щ Н</p>
         <p class="line10">М К И Б М Ш И Б</p>
-        <div class="hline"><hr></div>
+        <div class="hline"></div>
         <p class="line12">Д Ь Ш С Д У М Ь С</p>
         <p class="line13">Й У М С Ч У Д И Ь С</p>
     </div>
