--- a/project1/index.html
+++ b/project1/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='http://fonts.googleapis.com/css?family=Economica:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/style2.css">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="css/Style.css">
+    <title>WEB SITE</title>
 </head>
 <body>
     <div class="navbar">
+        <div class="logo">Company <span class="logo-name">NAME</span></div>
+        <div class="text-heder">
         <div class="list">
             <div class="menu">HOME
             </div>
@@ -70,9 +75,14 @@
               <a href="#">Link 19</a>
               <a href="#">Link 20</a>
               <a href="#">Link 21</a>
+             </div>
             </div>
-          </div>
+         </div>
       </div>
+  <div class="first-blok">
+    <div class="paranja">
+
+    </div>
   </div>
 </body>
 </html>
