--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/Style.css">
@@ -81,8 +81,44 @@
       </div>
   <div class="first-blok">
     <div class="paranja">
-
+      <div class="first-blok-text">
+        <h1>We are specialist in</h1>
+        <h2>Responsive designs, Stationary
+          And wordpress Themes</h2>
+          <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</h3>
+      </div>
+      <button class="button-first-blok">BUTON NAME</button>
     </div>
+  </div>
+  <div class="two-block"> 
+    <div class="two-blok-text ">
+      <span class="logo-text-two-block">Lorem Ipsum is simply dummy text of the printing</span>
+    </div>
+    <div class="firt-colona">
+      <div class="our-icon1">
+         <div class="object-1"><img src="img/object_1.png" width="150px" alt="замочок">
+         <span class="logo-over-objegt1">PROTECT</span>
+       </div>
+       <span class="text-over-objegt1">100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.</span>
+     </div>
+  
+  </div>
+  <div class="two-colona">
+    <div class="our-icon2">
+      <div class="object-2"><img src="img/object_2.png" width="150px" alt="блискавка">
+      <span class="logo-over-objegt2">Alert</span>
+    </div>
+    <span class="text-over-objegt2">100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.</span>
+  </div>
+  </div>
+  <div class="tree-colona">
+    <div class="our-icon3">
+      <div class="object-3"><img src="img/object_3.png" width="150px" alt="блискавка">
+      <span class="logo-over-objegt3">Detect</span>
+    </div>
+    <span class="text-over-objegt3">100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.</span>
+  </div>
+  </div>
   </div>
 </body>
 </html>
