--- a/project1/index.html
+++ b/project1/index.html
@@ -17,77 +17,77 @@
         <div class="list">
             <div class="menu">HOME
             </div>
-            <div class="list-content">
+            <!-- <div class="list-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
               <a href="#">Link 3</a>
-            </div>
+            </div> -->
           </div>
           <div class="list">
             <div class="menu">NEWS
             </div>
-            <div class="list-content">
+            <!-- <div class="list-content">
               <a href="#">Link 4</a>
               <a href="#">Link 5</a>
               <a href="#">Link 6</a>
-            </div>
+            </div> -->
           </div>
         <div class="list">
           <div class="menu">SEARCH
           </div>
-          <div class="list-content">
+          <!-- <div class="list-content">
             <a href="#">Link 7</a>
             <a href="#">Link 8</a>
             <a href="#">Link 9</a>
-          </div>
+          </div> -->
         </div> 
         <div class="list">
             <div class="menu">LAMBADA
             </div>
-            <div class="list-content">
+            <!-- <div class="list-content">
               <a href="#">Link 10</a>
               <a href="#">Link 11</a>
               <a href="#">Link 12</a>
-            </div>
+            </div> -->
           </div>
           <div class="list">
             <div class="menu">ANSWER
             </div>
-            <div class="list-content">
+            <!-- <div class="list-content">
               <a href="#">Link 13</a>
               <a href="#">Link 14</a>
               <a href="#">Link 15</a>
-            </div>
+            </div> -->
           </div>
           <div class="list">
             <div class="menu">LOGIK
             </div>
-            <div class="list-content">
+            <!-- <div class="list-content">
               <a href="#">Link 16</a>
               <a href="#">Link 17</a>
               <a href="#">Link 18</a>
-            </div>
+            </div> -->
           </div>
           <div class="list">
             <div class="menu">SPORT
             </div>
-            <div class="list-content">
+            <!-- <div class="list-content">
               <a href="#">Link 19</a>
               <a href="#">Link 20</a>
               <a href="#">Link 21</a>
-             </div>
+             </div> -->
             </div>
          </div>
       </div>
-  <div class="first-blok">
+  <div class="first-block">
     <div class="paranja">
-      <div class="first-blok-text">
+      <div class="first-block-text">
         <h1>We are specialist in</h1>
         <h2>Responsive designs, Stationary
           And wordpress Themes</h2>
           <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</h3>
       </div>
-      <button class="button-first-blok">BUTON NAME</button>
+      <button class="button-first-block">BUTON NAME</button>
     </div>
   </div>
   <div class="two-block"> 
@@ -119,6 +119,18 @@
     <span class="text-over-objegt3">100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.</span>
   </div>
   </div>
+  </div>
+  <div class="tree-block">
+    <div class="paranja2">
+      <div class="tree-block-logo-text">Lorem Ipsum is simply dummy text of the printing 
+        and typesetting industry. Lorem Ipsum has been.... <br><span class="tree-block-italic-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+        <ul class="tree-block-list">
+          <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+          <li class="osobena-li">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</li>
+          <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
