--- a/project1/index.html
+++ b/project1/index.html
@@ -85,7 +85,7 @@
         <h1>We are specialist in</h1>
         <h2>Responsive designs, Stationary
           And wordpress Themes</h2>
-          <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</h3>
+          <div class="h3-lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</div>
       </div>
       <button class="button-first-block">BUTON NAME</button>
     </div>
@@ -129,6 +129,63 @@
           <li class="osobena-li">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</li>
           <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
         </ul>
+      </div>
+    </div>
+  </div>
+  <div class="four-block"> <span class="title-list">WE HAVE A VERY FLEXIBLE OFFERS FOR YOU TO CHOOSE</span> 
+    <div >
+    <div class="first-tile">
+      <div class="top-block">
+          <h2 class="top-h2">STANDARD</h2>
+      </div>
+      <div class="midle-block">
+          <h3 class="midle-h3">ICONIC GRAPHICS</h3>
+          <span class="dolar">$</span>
+          <span class="price">10</span>
+          <span class="monthly">Monthly</span>
+          <div class="table">
+              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unmetered Traffic</span> </div>
+              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Domain</span> </div>
+              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Databases</span></div>
+              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+          </div>
+          <button class="button-enrol">ENROL TODAY</button>
+      </div>
+  </div>
+  <div class="two-tile">
+      <div class="top-block2">
+          <h2 class="top-h2-2">BEST VALUE</h2>
+      </div>
+      <div class="midle-block2">
+          <h3 class="midle-h3">ICONIC GRAPHICS</h3>
+          <span class="dolar">$</span>
+          <span class="price">25</span>
+          <span class="monthly">Monthly</span>
+          <div class="table">
+              <div class="first"><img class="img-gal" src="img/1.png" alt="img/1.png"><span class="table-text">PHP, PERL, ASP, JSP</span> </div>
+              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">SEMI DEDICATED</span> </div>
+              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Stating or Production</span></div>
+              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+          </div>
+          <button class="button-enrol button-enrol2">ENROL TODAY</button>
+      </div>
+  </div>
+  <div class="tree-tile">
+      <div class="top-block3">
+          <h2 class="top-h2">ULTIMATE</h2>
+      </div>
+      <div class="midle-block">
+          <h3 class="midle-h3">ICONIC GRAPHICS</h3>
+          <span class="dolar">$</span>
+          <span class="price">35</span>
+          <span class="monthly">Monthly</span>
+          <div class="table">
+              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unmetered Traffic</span> </div>
+              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Domain</span> </div>
+              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Databases</span></div>
+              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+          </div>
+          <button class="button-enrol">ENROL TODAY</button>
       </div>
     </div>
   </div>
