--- a/project1/index.html
+++ b/project1/index.html
@@ -122,6 +122,7 @@
   </div>
   <div class="tree-block">
     <div class="paranja2">
+      <div class="tree-bolock-all-content">
       <div class="tree-block-logo-text">Lorem Ipsum is simply dummy text of the printing 
         and typesetting industry. Lorem Ipsum has been.... <br><span class="tree-block-italic-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
         <ul class="tree-block-list">
@@ -131,63 +132,92 @@
         </ul>
       </div>
     </div>
+    </div>
   </div>
-  <div class="four-block"> <span class="title-list">WE HAVE A VERY FLEXIBLE OFFERS FOR YOU TO CHOOSE</span> 
-    <div >
-    <div class="first-tile">
-      <div class="top-block">
-          <h2 class="top-h2">STANDARD</h2>
-      </div>
-      <div class="midle-block">
-          <h3 class="midle-h3">ICONIC GRAPHICS</h3>
-          <span class="dolar">$</span>
-          <span class="price">10</span>
-          <span class="monthly">Monthly</span>
-          <div class="table">
-              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unmetered Traffic</span> </div>
-              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Domain</span> </div>
-              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Databases</span></div>
-              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+  <div class="four-block">
+    <span class="title-list">WE HAVE A VERY FLEXIBLE OFFERS FOR YOU TO CHOOSE</span> 
+    <div class="all-tile">
+      <div class="first-tile">
+          <div class="top-block">
+              <h2 class="top-h2">STANDARD</h2>
           </div>
-          <button class="button-enrol">ENROL TODAY</button>
-      </div>
-  </div>
-  <div class="two-tile">
-      <div class="top-block2">
-          <h2 class="top-h2-2">BEST VALUE</h2>
-      </div>
-      <div class="midle-block2">
-          <h3 class="midle-h3">ICONIC GRAPHICS</h3>
-          <span class="dolar">$</span>
-          <span class="price">25</span>
-          <span class="monthly">Monthly</span>
-          <div class="table">
-              <div class="first"><img class="img-gal" src="img/1.png" alt="img/1.png"><span class="table-text">PHP, PERL, ASP, JSP</span> </div>
-              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">SEMI DEDICATED</span> </div>
-              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Stating or Production</span></div>
-              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+          <div class="midle-block">
+              <h3 class="midle-h3">ICONIC GRAPHICS</h3>
+              <span class="dolar">$</span>
+              <span class="price">10</span>
+              <span class="monthly">Monthly</span>
+              <div class="table">
+                  <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unmetered Traffic</span> </div>
+                  <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Domain</span> </div>
+                  <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Databases</span></div>
+                  <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+              </div>
+              <button class="button-enrol">ENROL TODAY</button>
           </div>
-          <button class="button-enrol button-enrol2">ENROL TODAY</button>
       </div>
-  </div>
-  <div class="tree-tile">
-      <div class="top-block3">
-          <h2 class="top-h2">ULTIMATE</h2>
-      </div>
-      <div class="midle-block">
-          <h3 class="midle-h3">ICONIC GRAPHICS</h3>
-          <span class="dolar">$</span>
-          <span class="price">35</span>
-          <span class="monthly">Monthly</span>
-          <div class="table">
-              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unmetered Traffic</span> </div>
-              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Domain</span> </div>
-              <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Databases</span></div>
-              <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+      <div class="two-tile">
+          <div class="top-block2">
+              <h2 class="top-h2-2">BEST VALUE</h2>
           </div>
-          <button class="button-enrol">ENROL TODAY</button>
+          <div class="midle-block2">
+              <h3 class="midle-h3">ICONIC GRAPHICS</h3>
+              <span class="dolar">$</span>
+              <span class="price">25</span>
+              <span class="monthly">Monthly</span>
+              <div class="table">
+                  <div class="first"><img class="img-gal" src="img/1.png" alt="img/1.png"><span class="table-text">PHP, PERL, ASP, JSP</span> </div>
+                  <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">SEMI DEDICATED</span> </div>
+                  <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Stating or Production</span></div>
+                  <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+              </div>
+              <button class="button-enrol button-enrol2">ENROL TODAY</button>
+          </div>
+      </div>
+      <div class="tree-tile">
+          <div class="top-block3">
+              <h2 class="top-h2">ULTIMATE</h2>
+          </div>
+          <div class="midle-block">
+              <h3 class="midle-h3">ICONIC GRAPHICS</h3>
+              <span class="dolar">$</span>
+              <span class="price">35</span>
+              <span class="monthly">Monthly</span>
+              <div class="table">
+                  <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unmetered Traffic</span> </div>
+                  <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Domain</span> </div>
+                  <div class="first"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted Databases</span></div>
+                  <div class="first1"><img class="img-gal"  src="img/1.png" alt="img/1.png"><span class="table-text">Unlimeted e-Mail</span></div>
+              </div>
+              <button class="button-enrol">ENROL TODAY</button>
+          </div>
       </div>
     </div>
+  </div>
+  <div class="reviews">
+    <div class="reviews">
+      <div class="paranja-reviews">
+          <h2 class="reviews-h2"><span class="h2-orange">WHAT</span> CLIENT SAYS</h2>
+          <div class="all-foto-coment">
+          <img class="girl-foto" src="img/girl.jpg" alt="User_foto">
+              <div class="white-triangle"><img src="img/whtite.png" alt="triangle">
+              </div>
+              <div class="coment-box">
+                  <div class="coment-text">- Staciya Trollio</div>
+                  <div class="coment-customers">Customers</div>
+                  <div class="coment-dot">................................................................................</div>
+                  <div class="coment-coment">Lorem ipsum dolor sit fvdfv fvfv amet consec tetur sdcsdcdscsd dfbdf dgerg. </div>
+              </div>
+              <img class="men-foto" src="img/men.jpg" alt="User_foto">
+              <div class="white-triangle2"><img src="img/whtite.png" alt="triangle"></div>
+              <div class="coment-box">
+                  <div class="coment-text">- Tolik Dodik</div>
+                  <div class="coment-customers">Customers</div>
+                  <div class="coment-dot">................................................................................</div>
+                  <div class="coment-coment">Lorem ipsum dolor sit amet consec tetur sdcsdcdscsd dfbdf dgerg. </div>
+              </div>
+          </div>
+      </div>
+  </div>
   </div>
 </body>
 </html>
