--- a/project1/index.html
+++ b/project1/index.html
@@ -219,5 +219,35 @@
       </div>
   </div>
   </div>
+  <div class="niz">
+    <div class="niz-niz">
+    <div class="contact">
+      <div class="icon-nav">
+        <img class="metka" src="img/metka.png" alt="metka">
+        <img class="Phone" src="img/tel.png" alt="Phone">
+        <img class="mail" src="img/mail.png" alt="mail">
+      </div>
+      <ul class="contact-ul">
+        <li>Iconic Graphics</li>
+        <li>123 Main Street</li>
+        <li>EastWest</li>
+        <li>LHR 54500</li>
+        
+      </ul>
+      <ul class="contact-ul-two">
+        <li>012.345.6789</li>
+        <li>info@iconicgraphics.com</li>
+      </ul>
+      <div class="social">
+        <img class="facebook" src="img/facebook.png" width="48px" alt="facebook">
+        <img class="twiter" src="img/twiter.png" width="48px" alt="twiter">
+        <img src="img/lin.png" width="48px" alt="likegin">
+      </div>
+    </div>
+    <div class="map"></div>
+  </div>
+</div>
+  <div class="jopka">Copyright © 2014 <span class="Company">Company Name</span>. All rights reserved. <br>
+    Designed by <span class="Iconic" >IconicGraphics.com</span></div>
 </body>
 </html>
