--- a/project1/index.html
+++ b/project1/index.html
@@ -11,74 +11,76 @@
     <title>WEB SITE</title>
 </head>
 <body>
+  <div class="navbar-box">
     <div class="navbar">
-        <div class="logo">Company <span class="logo-name">NAME</span></div>
-        <div class="text-heder">
-        <div class="list">
-            <div class="menu">HOME
-            </div>
-            <!-- <div class="list-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
-            </div> -->
-          </div>
-          <div class="list">
-            <div class="menu">NEWS
-            </div>
-            <!-- <div class="list-content">
-              <a href="#">Link 4</a>
-              <a href="#">Link 5</a>
-              <a href="#">Link 6</a>
-            </div> -->
-          </div>
-        <div class="list">
-          <div class="menu">SEARCH
+      <div class="logo">Company <span class="logo-name">NAME</span></div>
+      <div class="text-heder">
+      <div class="list">
+          <div class="menu">HOME
           </div>
           <!-- <div class="list-content">
-            <a href="#">Link 7</a>
-            <a href="#">Link 8</a>
-            <a href="#">Link 9</a>
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
           </div> -->
-        </div> 
+        </div>
         <div class="list">
-            <div class="menu">LAMBADA
-            </div>
-            <!-- <div class="list-content">
-              <a href="#">Link 10</a>
-              <a href="#">Link 11</a>
-              <a href="#">Link 12</a>
-            </div> -->
+          <div class="menu">NEWS
           </div>
-          <div class="list">
-            <div class="menu">ANSWER
-            </div>
-            <!-- <div class="list-content">
-              <a href="#">Link 13</a>
-              <a href="#">Link 14</a>
-              <a href="#">Link 15</a>
-            </div> -->
+          <!-- <div class="list-content">
+            <a href="#">Link 4</a>
+            <a href="#">Link 5</a>
+            <a href="#">Link 6</a>
+          </div> -->
+        </div>
+      <div class="list">
+        <div class="menu">SEARCH
+        </div>
+        <!-- <div class="list-content">
+          <a href="#">Link 7</a>
+          <a href="#">Link 8</a>
+          <a href="#">Link 9</a>
+        </div> -->
+      </div> 
+      <div class="list">
+          <div class="menu">LAMBADA
           </div>
-          <div class="list">
-            <div class="menu">LOGIK
-            </div>
-            <!-- <div class="list-content">
-              <a href="#">Link 16</a>
-              <a href="#">Link 17</a>
-              <a href="#">Link 18</a>
-            </div> -->
+          <!-- <div class="list-content">
+            <a href="#">Link 10</a>
+            <a href="#">Link 11</a>
+            <a href="#">Link 12</a>
+          </div> -->
+        </div>
+        <div class="list">
+          <div class="menu">ANSWER
           </div>
-          <div class="list">
-            <div class="menu">SPORT
-            </div>
-            <!-- <div class="list-content">
-              <a href="#">Link 19</a>
-              <a href="#">Link 20</a>
-              <a href="#">Link 21</a>
-             </div> -->
-            </div>
-         </div>
-      </div>
+          <!-- <div class="list-content">
+            <a href="#">Link 13</a>
+            <a href="#">Link 14</a>
+            <a href="#">Link 15</a>
+          </div> -->
+        </div>
+        <div class="list">
+          <div class="menu">LOGIK
+          </div>
+          <!-- <div class="list-content">
+            <a href="#">Link 16</a>
+            <a href="#">Link 17</a>
+            <a href="#">Link 18</a>
+          </div> -->
+        </div>
+        <div class="list">
+          <div class="menu">SPORT
+          </div>
+          <!-- <div class="list-content">
+            <a href="#">Link 19</a>
+            <a href="#">Link 20</a>
+            <a href="#">Link 21</a>
+           </div> -->
+          </div>
+       </div>
+    </div>
+  </div>
   <div class="first-block">
     <div class="paranja">
       <div class="first-block-text">
