--- a/10/task10.html
+++ b/10/task10.html
@@ -34,7 +34,13 @@
             <div class="button-zoom"></div>
             <div class="button-link"></div>
         </div>
-        <div class="first-blok"></div>
     </div>
+    <div class="paranja">
+    <div class="open">
+        <div class="open-img">
+            <div class="button-close"><img src="img/close.png" alt="close"></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
