--- a/11/index.html
+++ b/11/index.html
@@ -12,9 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&family=Oxygen+Mono&family=Oxygen:wght@300;400;700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+Lisu:regular,500,600,700&display=swap" rel="stylesheet" />
     <title>Local Host</title>
 </head>
-<body>
+<body> контакти
     <div class="site">
         <header>
             <div class="logo">Officetime
@@ -32,16 +33,13 @@
                         <item class="item-menu">Products</item>
                     </li>
                     <li>
-                        <item class="item-menu blog">Blog
-                            <!-- <div class="menu-blog-div"><img class="blog-menu-img" src="img/pod-menu.png" alt="">
-                                <ul class="blog-menu">
-                                    <li class="blog-menu-li">Articles</li>
-                                    <li class="blog-menu-li">Writers</li>
-                                    <li class="blog-menu-li">Top 50</li>
-                                    <li class="blog-menu-li">The Hall of Fame</li>
-                                </ul>
-                            </div>
-                             -->
+                        <item class="item-menu blog">Blog 
+                                <div class="item-menu-content">
+                                    <a href="#">Articles <span><br> this text is complementary</span></a>
+                                    <a href="#">Writers</a>
+                                    <a href="#">Top 50</a>
+                                    <a href="#">The Hall of Fame</a>
+                                </div>
                         </item>
                     </li>
                     <li>
@@ -60,18 +58,18 @@
                         <div class="panel">
                             <img class="left-button" src="img/Button.png" alt="">
                                 <div class="midle-button">
-                                <div class="button-text">Great Lakehouse with Land</div>
-                                <div class="button-pod-text">from 21K</div>
-                        </div>
+                                    <div class="button-text">Great Lakehouse with Land</div>
+                                    <div class="button-pod-text">from 21K</div>
+                                </div>
                             <img class="right-button" src="img/Button.png" alt="">
-                    </div>
-                        </div>   
+                         </div>
+                    </div>   
                 <div class="logo-text">
                     <h1 class="logo-text-main">The Amazing Spider-Man</h1>
                     <p class="simple-text">Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas sed diam eget risus varius blandit sit.</p>
                     <div class="line">sxcscsscscscsxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxccccxxxxxxxxxxxxxxxxxxxxxx</div>
                     <div class="watch-button">
-                       <div class="watch-button-text">Watch Trailer</div> 
+                        <div class="watch-button-text">Watch Trailer</div> 
                         <div class="watch-button-quality">In 720p QUALITY</div>
                         <div class="orange-button"><img src="img/orange-button.png" alt=""></div>
                     </div>
