--- a/10/task10.html
+++ b/10/task10.html
@@ -13,7 +13,8 @@
     <div class="main-box">
         <div class="first-img">
             <div class="button-zoom"></div>
-            <div class="button-link"></div></div>
+            <div class="button-link"></div>
+        </div>
         <div class="two-img">
             <div class="button-zoom"></div>
             <div class="button-link"></div>
@@ -35,11 +36,11 @@
             <div class="button-link"></div>
         </div>
     </div>
-    <div class="paranja">
+    <!-- <div class="paranja">
     <div class="open">
         <div class="open-img">
             <div class="button-close"><img src="img/close.png" alt="close"></div>
-        </div>
+        </div> --> -->
     </div>
 </div>
 </body>
