--- a/java/2/index.html
+++ b/java/2/index.html
@@ -5,6 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who are u?</title>
+    <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono:regular" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <style>
+        body{
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            font-size: 4rem;
+            color: aliceblue;
+            background-color: rgb(46, 49, 53);
+            font-family: 'Montserrat', sans-serif;
+            display: block;
+        }
+        h1{
+            display: block;
+            margin-top: 25%;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <!-- <script src='/java/2/1.js'></script> -->
@@ -12,7 +31,8 @@
     <!-- <script src='/java/2/3.js'></script> -->
     <!-- <script src='/java/2/4.js'></script> -->
     <script src='/java/2/5.js'></script>
-    <p>dfdd</p>
+    
+    <h1>JavaScript </h1>
     <!-- <script>alert('Нуб нічого не вийшло');</script> -->
 </body>
 </html>
