--- a/site-reklama/3.html
+++ b/site-reklama/3.html
@@ -16,8 +16,8 @@
         <div class="nav-bar">
             <span class="logo-name"><a href="index.html">CONTRAST</a></span>
             <div class="skoba-item">
-                <img class="skoba" src="img/skoba.png" alt="">
-                <img class="skoba skoba2" src="img/skoba.png" alt="">
+                <img class="skoba" src="img/skoba.png" alt="contrast-image">
+                <img class="skoba skoba2" src="img/skoba.png" alt="contrast-image">
                 <div class="mobile-menu">
                     <input id="menu__toggle" type="checkbox" />
                     <label class="menu__btn" for="menu__toggle">
@@ -25,7 +25,7 @@
                     </label>
                     <ul class="menu__box">
                         <li><a class="menu__item" href="2.html">Про нас</a></li>
-                        <li><a class="menu__item" href="">Відгуки</a></li>
+                        <!-- <li><a class="menu__item" href="">Відгуки</a></li> -->
                         <li><a class="menu__item" href="3.html">Контакти</a></li>
                     </ul>
                 </div>
@@ -33,7 +33,7 @@
             <span class="logo-name-mobile"><a href="index.html">CONTRAST</a></span> 
             <nav class="menu-full">
                 <a class="menu-full-item" href="2.html">Про нас</a>
-                <a class="menu-full-item" href="">Відгуки</a>
+                <!-- <a class="menu-full-item" href="">Відгуки</a> -->
                 <a class="menu-full-item" href="3.html">Контакти</a>
             </nav>
         </div>
