--- a/java/2/index.html
+++ b/java/2/index.html
@@ -20,8 +20,11 @@
         }
         h1{
             display: block;
+            width: 100%;
+            height: 100%;
             margin-top: 25%;
             align-items: center;
+            text-shadow: 5px 5px 10px black;
         }
     </style>
 </head>
